sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:7: error: missing arguments for method setValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
			 setValeur(j+1) = getValeur(j);
                         ^AlgInsertionSort:10: error: missing arguments for method setValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
		setValeur(j)=v
                ^